# kurs2

./: bd
at-home/: at-home.sln
at-home/at-home-lab1/: at-home-lab1.vcxproj  at-home-lab1.vcxproj.filters  bitfield.h  bitfield.ixx  main.cpp  set.h  set.ixx
at-home/at-home1/: at-home1.vcxproj  main.cpp
in-class/: DSU.sln  in-class.sln
in-class/DSU/: DSU.h  DSU.vcxproj  DSU.vcxproj.filters  main.cpp
in-class/HashTable-master/: CW.sln
in-class/HashTable-master/CW/: CW.vcxproj  CW.vcxproj.filters  hashtable.h  main.cpp
in-class/Project1in-class/: Project1in-class.vcxproj  class.cpp  class.h  main.cpp
in-class/Project2/: Project2.vcxproj  main.cpp
in-class/Project3in-class/: Project3in-class.vcxproj  main.cpp
in-class/cmake_polynomial/: CMakeLists.txt
in-class/cmake_polynomial/lib_list/: list.h
in-class/cmake_polynomial/lib_polynomial/: polynomial.cpp  polynomial.h
in-class/cmake_polynomial/main/: main.cpp
in-class/cmake_polynomial/tests/: CMakeLists.txt  test_polynomial.cpp
in-class/tree/: tree.sln
in-class/tree/tree/: main.cpp  tree.h  tree.vcxproj  tree.vcxproj.filters
